...
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="words">Words</string>
    <string name="invalid_tag">Invalid Tag</string>
    <string name="tag_added_as_collaborator">%1$s added as a collaborator.</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="rename_tag_error_empty">Tags cannot be empty</string>
    <string name="rename_tag_error_length">Tag length too long</string>
    <string name="rename_tag_error_spaces">Tags cannot contain spaces</string>
    <string name="rename_tag_message">An error occurred renaming the tag. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="rename_tag_message_length">The tag length is too long. Please, try again with a shorter name. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="tag_name">Tag name</string>
    <string name="delete_tag">Delete Tag</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty</string>
    <string name="empty_trash">Empty Trash</string>
    <string name="confirm_empty_trash">Do you want to empty the trash? All notes in trash will be permanently deleted. This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="word">Word</string>
...
    <string name="dialog_tag_add_button_negative" translatable="false">@android:string/cancel</string>
    <string name="dialog_tag_add_button_positive" translatable="false">@string/save</string>
    <string name="dialog_tag_add_hint" translatable="false">@string/tag_name</string>
    <string name="dialog_tag_add_title" translatable="false">@string/add_tag</string>
    <string name="dialog_tag_error_message">An error occurred adding the tag. Please, try again. If the problem continues, contact us at %1$s%2$s%3$s%4$s%5$s for help.</string>
    <string name="dialog_tag_error_message_email" translatable="false">\u003c\u0061\u0020\u0068\u0072\u0065\u0066\u003d\u0022\u006d\u0061\u0069\u006c\u0074\u006f\u003a\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006e\u006f\u0074\u0065\u002e\u0063\u006f\u006d\u0022\u003e\u0073\u0075\u0070\u0070\u006f\u0072\u0074\u0040\u0073\u0069\u006d\u0070\u006c\u0065\u006
    <string name="tag_error_empty">Tags cannot be empty</string>
    <string name="tag_error_exists">Tag already exists</string>
    <string name="tag_error_length">Tag length too long</string>
    <string name="tag_error_spaces">Tags cannot contain spaces</string>
    <string name="tag_error_collaborator">Tags cannot be emails</string>

    <!-- Undo -->
    <string name="undo">Undo</string>
    <string name="note_deleted">Note trashed.</string>
    <string name="notes_trashed">Notes trashed.</string>
...

    <string name="dialog_browser_exception_button_copy_url">Copy URL</string>
    <string name="dialog_browser_exception_message">Cannot open link.  Copy the URL to paste it into a browser.</string>
    <string name="dialog_browser_exception_title">Link Error</string>
    <string name="dialog_browser_exception_toast_copy_failure">URL could not be copied to clipboard</string>
    <string name="dialog_browser_exception_toast_copy_success">URL copied to clipboard</string>
    <string name="dialog_tag_conflict_button_positive">Merge</string>
    <string name="dialog_tag_conflict_message">The tag \"%1$s\" already exists. Would you like to merge \"%2$s\" into the \"%3$s\" tag?</string>
    <string name="dialog_tag_conflict_title">Tag Conflict</string>

    <string name="empty_notes_all">Create your first note</string>
    <string name="empty_notes_search">No notes found</string>
    <string name="empty_notes_search_button">Create a new note titled \"%1$s\"</string>
    <string name="empty_notes_search_button_default">Create a new note</string>
    <string name="empty_notes_tag">No notes tagged \"%1$s\"</string>
...
